issue fixed #20293 Main website label and main website store label not alignd proper overlapping in left navigation in admin panel during create New Cart Price Rule
issue fixed #20293 Main website label and main website store label not alignd proper overlapping in left navigation in admin panel during create New Cart Price Rule

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
@@ -22,7 +22,23 @@
             text-align: left;
         }
     }
-
+    
+    [class*='field-w']{
+        .admin__field-label {
+            span {
+                margin-left: 30px;
+            }
+        }
+    }
+    
+    [class*='field-sg']{
+        .admin__field-label {
+            span {
+                margin-left: 60px;
+            }
+        }
+    }
+    
     [class*='field-website_label'] {
         .admin__field-label {
             text-align: right;
